localization of add_auth_data_to_household_page.dart, auth_page.dart and account_page.dart

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -2,5 +2,33 @@
     "accountInformation": "Account",
     "institutionTitle": "Haushalt",
     "chartsTitle": "Statistiken",
-    "tasksTitle": "Aufgaben"
+    "tasksTitle": "Aufgaben",
+    "authPageInit": "Authentifizierung wird initialisiert",
+    "supportErrorMessage": "Bitte kontaktiere den Support, wenn du das siehst!",
+    "noConnection" : "Kein Internet, bitte überprüfe deine Verbindung.",
+    "email" : "E-Mail",
+    "username" : "Benutzername",
+    "fullName" : "Name",
+    "shortIdentifier" : "ID",
+    "password" : "Passwort",
+    "changePassword" : "Passwort ändern",
+    "logout" : "Abmelden",
+    "logoutSubtitle" : "Klicken zum Abmelden",
+    "warning" : "Warnung",
+    "deleteUserAlert" : "Möchtest du wirklich deinen Benutzer löschen? Du kannst dies nicht rückgängig machen",
+    "deleteUserInformation" : "Bitte verlasse den Haushalt, bevor du deinen Nutzer löscht",
+    "cancel" : "Abbrechen",
+    "delete" : "Löschen",
+    "deleteUserSubtitle" : "Nutzerdaten löschen",
+    "joinInstitution" : "Trete einem existierenden Haushalt bei",
+    "institutionIdentifier" : "Haushalt ID",
+    "institutionIdentifierHint" : "Gebe die ID eines Haushalts an",
+    "identifierValidatorMessage" : "ID muss 15 Zeichen lang sein",
+    "join" : "Beitreten",
+    "createInstitution" : "Oder erstelle einen neuen Haushalt",
+    "institutionTitleField" : "Haushalt Titel",
+    "institutionTitleHint" : "Gebe einen Titel für einen Haushalt ein",
+    "validatorMessageNull" : "Bitte gebe einen Wert ein",
+    "titleValidatorMessageLength" : "Muss kürzer sein als 15 Zeichen",
+    "create" : "Erstelle"
 }
