started with option to save data longer than one week

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -33,7 +33,7 @@
     "validatorMessageSame" : "Es kann nicht gleich sein",
     "create" : "Erstelle",
     "admin" : "Administrator",
-    "udpate" : "Aktualisieren",
+    "update" : "Aktualisieren",
     "title" : "Titel",
     "current" : "Aktuell",
     "changeAdmin" : "Ändern",
