--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -44,6 +44,37 @@
     "user" : "Nutzer",
     "removingUserWarning" : "Möchtest du diesen Nutzer wirklich entfernen?",
     "allowedUserIdentifiers" : "Erlaubte Nutzer ID's",
-    "identifier" : "ID"
-
+    "identifier" : "ID",
+    "remove" : "Entfernen",
+    "leave" : "Verlassen",
+    "clickToLeaveInstitution" : "Klicken, um Haushalt zu verlassen.",
+    "leaveInstitutionHint" : "Beim Klicken auf Okay, verlässt du den Haushalt",
+    "leaveInstitutionHintAdmin" : "Wenn du den Haushalt als Admin verlässt, wird der Haushalt gelöscht",
+    "leaveInstitutionHintAdminUser" : "Du kannst den Haushalt als Admin nur verlassen, wenn du der einzige Nutzer in diesem Haushalt bist",
+    "copyIdentifierMessage" : "ID {ID} kopiert.",
+    "institutionPageInit" : "Haushalt wird initialisiert",
+    "institutionTaskPageInit" : "Haushalt Aufgaben werden initialisiert",
+    "chartsPageInit" : "Statistiken werden initialisiert",
+    "noTaskHint" : "Keine Aufgabe, erstelle eine neue.",
+    "pieChartTitle" : "Heutige Aktivität",
+    "you" : "Du",
+    "shortMonday" : "Mon",
+    "shortTuesday" : "Die",
+    "shortWednesday" : "Mit",
+    "shortThursday" : "Don",
+    "shortFriday" : "Fre",
+    "shortSaturday" : "Sam",
+    "shortSunday" : "Son",
+    "january" : "Januar",
+    "february" : "Februar",
+    "march" : "März",
+    "april" : "April",
+    "may" : "Mai",
+    "june" : "Juni",
+    "july" : "Juli",
+    "august" : "August",
+    "september" : "September",
+    "october" : "Oktober",
+    "november" : "November",
+    "december" : "Dezember"
 }
