--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -89,8 +89,25 @@
     "signUpQuestion" : "Kein Account? Registriere dich!",
     "forgetPassword" : "Passwort vergessen?",
     "validatorMessagePasswordLength" : "Verwende mindestens 8 Zeichen",
+    "validatorMessagePasswordMatching" : "Die Passwörter müssen gleich sein",
     "reEnterPasswordHint" : "Passwort erneut eingeben",
     "usernameHint" : "Benutzernamen eingeben",
     "validatorMessageValidFormat" : "Eingabe ist nicht valide",
-    "fullNameHint" : "Namen eingeben"
+    "fullNameHint" : "Namen eingeben",
+    "enterOldPasswordHint" : "Altes Passwort eingeben",
+    "changeEmail" : "E-Mail ändern",
+    "changeName" : "Name ändern",
+    "changeUsername" : "Benutzernamen ändern",
+    "hintNewEmail" : "Neue E-Mail",
+    "hintNewName" : "Neuer Name",
+    "hintNewUsername" : "Neuer Benutzername",
+    "hintNewPassword" : "Neues Passwort",
+    "buttonTextEmail" : "E-Mail ändern",
+    "buttonTextFullName" : "Name ändern",
+    "buttonTextUsername" : "Benutzernamen ändern",
+    "buttonTextPassword" : "Passwort ändern",
+    "resetPassword" : " Zurücksetzen",
+    "requestPasswordReset" : "Zurücksetzen Anfragen",
+    "requestSucceedMessage" : "Anfrage wurde erfolgreich gesendet",
+    "emailRequestInfo" : "Überprüfe, dein E-Mail Postfach. Dort findest du einen Link zum Zurücksetzen"
 }
