--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -5,109 +5,118 @@
     "tasksTitle": "Aufgaben",
     "authPageInit": "Authentifizierung wird initialisiert",
     "supportErrorMessage": "Bitte kontaktiere den Support, wenn du das siehst!",
-    "noConnection" : "Kein Internet, bitte überprüfe deine Verbindung.",
-    "email" : "E-Mail",
-    "username" : "Benutzername",
-    "fullName" : "Name",
-    "shortIdentifier" : "ID",
-    "password" : "Passwort",
-    "changePassword" : "Passwort ändern",
-    "logout" : "Abmelden",
-    "logoutSubtitle" : "Klicken zum Abmelden",
-    "warning" : "Warnung",
-    "deleteUserAlert" : "Möchtest du wirklich deinen Benutzer löschen? Du kannst dies nicht rückgängig machen",
-    "deleteUserInformation" : "Bitte verlasse den Haushalt, bevor du deinen Nutzer löscht",
-    "cancel" : "Abbrechen",
-    "delete" : "Löschen",
-    "deleteUserSubtitle" : "Nutzerdaten löschen",
-    "joinInstitution" : "Trete einem existierenden Haushalt bei",
-    "institutionIdentifier" : "Haushalt ID",
-    "institutionIdentifierHint" : "Gebe die ID eines Haushalts an",
-    "identifierValidatorMessage" : "ID muss 15 Zeichen lang sein",
-    "join" : "Beitreten",
-    "createInstitution" : "Oder erstelle einen neuen Haushalt",
-    "institutionTitleField" : "Haushalt Titel",
-    "institutionTitleHint" : "Gebe einen Titel für einen Haushalt ein",
-    "validatorMessageNull" : "Bitte gebe einen Wert ein",
-    "titleValidatorMessageLength" : "Muss kürzer sein als 15 Zeichen",
-    "validatorMessageSame" : "Es kann nicht gleich sein",
-    "create" : "Erstelle",
-    "admin" : "Administrator",
-    "update" : "Aktualisieren",
-    "title" : "Titel",
-    "current" : "Aktuell",
-    "changeAdmin" : "Ändern",
-    "change" : "Ändern",
-    "proceed" : "Fortfahren",
-    "changeAdminWarningMessage" : "Möchtest du wirklich dem Nutzer mit der ID {userIDFromNewAdmin} deine Administratorrechte geben? \nDu kannst dir diese nicht selbst wiedergeben",
-    "copyIdentifier" : "ID kopieren",
-    "user" : "Nutzer",
-    "removingUserWarning" : "Möchtest du diesen Nutzer wirklich entfernen?",
-    "allowedUserIdentifiers" : "Erlaubte Nutzer ID's",
-    "identifier" : "ID",
-    "remove" : "Entfernen",
-    "leave" : "Verlassen",
-    "clickToLeaveInstitution" : "Klicken, um Haushalt zu verlassen.",
-    "leaveInstitutionHint" : "Beim Klicken auf Okay, verlässt du den Haushalt",
-    "leaveInstitutionHintAdmin" : "Wenn du den Haushalt als Admin verlässt, wird der Haushalt gelöscht",
-    "leaveInstitutionHintAdminUser" : "Du kannst den Haushalt als Admin nur verlassen, wenn du der einzige Nutzer in diesem Haushalt bist",
-    "copyIdentifierMessage" : "ID {ID} kopiert.",
-    "institutionPageInit" : "Haushalt wird initialisiert",
-    "institutionTaskPageInit" : "Haushalt Aufgaben werden initialisiert",
-    "chartsPageInit" : "Statistiken werden initialisiert",
-    "noTaskHint" : "Keine Aufgabe, erstelle eine neue.",
-    "pieChartTitle" : "Heutige Aktivität",
-    "you" : "Du",
-    "shortMonday" : "Mon",
-    "shortTuesday" : "Die",
-    "shortWednesday" : "Mit",
-    "shortThursday" : "Don",
-    "shortFriday" : "Fre",
-    "shortSaturday" : "Sam",
-    "shortSunday" : "Son",
-    "january" : "Januar",
-    "february" : "Februar",
-    "march" : "März",
-    "april" : "April",
-    "may" : "Mai",
-    "june" : "Juni",
-    "july" : "Juli",
-    "august" : "August",
-    "september" : "September",
-    "october" : "Oktober",
-    "november" : "November",
-    "december" : "Dezember",
-    "errorCode" : "Fehler Code: {code}",
-    "reload" : "Neuladen",
-    "welcome" : "Willkommen",
-    "emailHint" : "E-Mail Adresse eingeben",
-    "emailValidatorMessage" : "E-Mail ist nicht valide",
-    "passwordHint" : "Passwort eingeben",
-    "login" : "Anmelden",
-    "loginQuestion" : "Schon registriert? Melde dich an!",
-    "signup" : "Registrieren",
-    "signUpQuestion" : "Kein Account? Registriere dich!",
-    "forgetPassword" : "Passwort vergessen?",
-    "validatorMessagePasswordLength" : "Verwende mindestens 8 Zeichen",
-    "validatorMessagePasswordMatching" : "Die Passwörter müssen gleich sein",
-    "reEnterPasswordHint" : "Passwort erneut eingeben",
-    "usernameHint" : "Benutzernamen eingeben",
-    "validatorMessageValidFormat" : "Eingabe ist nicht valide",
-    "fullNameHint" : "Namen eingeben",
-    "enterOldPasswordHint" : "Altes Passwort eingeben",
-    "changeEmail" : "E-Mail ändern",
-    "changeName" : "Name ändern",
-    "changeUsername" : "Benutzernamen ändern",
-    "hintNewEmail" : "Neue E-Mail",
-    "hintNewName" : "Neuer Name",
-    "hintNewUsername" : "Neuer Benutzername",
-    "hintNewPassword" : "Neues Passwort",
-    "buttonTextEmail" : "E-Mail ändern",
-    "buttonTextFullName" : "Name ändern",
-    "buttonTextUsername" : "Benutzernamen ändern",
-    "buttonTextPassword" : "Passwort ändern",
-    "resetPassword" : " Zurücksetzen",
-    "requestPasswordReset" : "Zurücksetzen Anfragen",
-    "requestSucceedMessage" : "Anfrage wurde erfolgreich gesendet",
-    "emailRequestInfo" : "Überprüfe, dein E-Mail Postfach. Dort findest du einen Link zum Zurücksetzen"
+    "noConnection": "Kein Internet, bitte überprüfe deine Verbindung.",
+    "email": "E-Mail",
+    "username": "Benutzername",
+    "fullName": "Name",
+    "shortIdentifier": "ID",
+    "password": "Passwort",
+    "changePassword": "Passwort ändern",
+    "logout": "Abmelden",
+    "logoutSubtitle": "Klicken zum Abmelden",
+    "warning": "Warnung",
+    "deleteUserAlert": "Möchtest du wirklich deinen Benutzer löschen? Du kannst dies nicht rückgängig machen",
+    "deleteUserInformation": "Bitte verlasse den Haushalt, bevor du deinen Nutzer löscht",
+    "cancel": "Abbrechen",
+    "delete": "Löschen",
+    "deleteUserSubtitle": "Nutzerdaten löschen",
+    "joinInstitution": "Trete einem existierenden Haushalt bei",
+    "institutionIdentifier": "Haushalt ID",
+    "institutionIdentifierHint": "Gebe die ID eines Haushalts an",
+    "identifierValidatorMessage": "ID muss 15 Zeichen lang sein",
+    "join": "Beitreten",
+    "createInstitution": "Oder erstelle einen neuen Haushalt",
+    "institutionTitleField": "Haushalt Titel",
+    "institutionTitleHint": "Gebe einen Titel für einen Haushalt ein",
+    "validatorMessageNull": "Bitte gebe einen Wert ein",
+    "titleValidatorMessageLength": "Muss kürzer sein als 15 Zeichen",
+    "validatorMessageSame": "Es kann nicht gleich sein",
+    "create": "Erstelle",
+    "admin": "Administrator",
+    "update": "Aktualisieren",
+    "title": "Titel",
+    "current": "Aktuell",
+    "changeAdmin": "Ändern",
+    "change": "Ändern",
+    "proceed": "Fortfahren",
+    "changeAdminWarningMessage": "Möchtest du wirklich dem Nutzer mit der ID {userIDFromNewAdmin} deine Administratorrechte geben? \nDu kannst dir diese nicht selbst wiedergeben",
+    "copyIdentifier": "ID kopieren",
+    "user": "Nutzer",
+    "removingUserWarning": "Möchtest du diesen Nutzer wirklich entfernen?",
+    "allowedUserIdentifiers": "Erlaubte Nutzer ID's",
+    "identifier": "ID",
+    "remove": "Entfernen",
+    "leave": "Verlassen",
+    "clickToLeaveInstitution": "Klicken, um Haushalt zu verlassen.",
+    "leaveInstitutionHint": "Beim Klicken auf Okay, verlässt du den Haushalt",
+    "leaveInstitutionHintAdmin": "Wenn du den Haushalt als Admin verlässt, wird der Haushalt gelöscht",
+    "leaveInstitutionHintAdminUser": "Du kannst den Haushalt als Admin nur verlassen, wenn du der einzige Nutzer in diesem Haushalt bist",
+    "copyIdentifierMessage": "ID {ID} kopiert.",
+    "institutionPageInit": "Haushalt wird initialisiert",
+    "institutionTaskPageInit": "Haushalt Aufgaben werden initialisiert",
+    "chartsPageInit": "Statistiken werden initialisiert",
+    "noTaskHint": "Keine Aufgabe, erstelle eine neue.",
+    "pieChartTitle": "Heutige Aktivität",
+    "you": "Du",
+    "shortMonday": "Mon",
+    "shortTuesday": "Die",
+    "shortWednesday": "Mit",
+    "shortThursday": "Don",
+    "shortFriday": "Fre",
+    "shortSaturday": "Sam",
+    "shortSunday": "Son",
+    "january": "Januar",
+    "february": "Februar",
+    "march": "März",
+    "april": "April",
+    "may": "Mai",
+    "june": "Juni",
+    "july": "Juli",
+    "august": "August",
+    "september": "September",
+    "october": "Oktober",
+    "november": "November",
+    "december": "Dezember",
+    "errorCode": "Fehler Code: {code}",
+    "reload": "Neuladen",
+    "welcome": "Willkommen",
+    "emailHint": "E-Mail Adresse eingeben",
+    "emailValidatorMessage": "E-Mail ist nicht valide",
+    "passwordHint": "Passwort eingeben",
+    "login": "Anmelden",
+    "loginQuestion": "Schon registriert? Melde dich an!",
+    "signup": "Registrieren",
+    "signUpQuestion": "Kein Account? Registriere dich!",
+    "forgetPassword": "Passwort vergessen?",
+    "validatorMessagePasswordLength": "Verwende mindestens 8 Zeichen",
+    "validatorMessagePasswordMatching": "Die Passwörter müssen gleich sein",
+    "reEnterPasswordHint": "Passwort erneut eingeben",
+    "usernameHint": "Benutzernamen eingeben",
+    "validatorMessageValidFormat": "Eingabe ist nicht valide",
+    "fullNameHint": "Namen eingeben",
+    "enterOldPasswordHint": "Altes Passwort eingeben",
+    "changeEmail": "E-Mail ändern",
+    "changeName": "Name ändern",
+    "changeUsername": "Benutzernamen ändern",
+    "hintNewEmail": "Neue E-Mail",
+    "hintNewName": "Neuer Name",
+    "hintNewUsername": "Neuer Benutzername",
+    "hintNewPassword": "Neues Passwort",
+    "buttonTextEmail": "E-Mail ändern",
+    "buttonTextFullName": "Name ändern",
+    "buttonTextUsername": "Benutzernamen ändern",
+    "buttonTextPassword": "Passwort ändern",
+    "resetPassword": " Zurücksetzen",
+    "requestPasswordReset": "Zurücksetzen Anfragen",
+    "requestSucceedMessage": "Anfrage wurde erfolgreich gesendet",
+    "emailRequestInfo": "Überprüfe, dein E-Mail Postfach. Dort findest du einen Link zum Zurücksetzen",
+    "notVerified": "Der Nutzer {email} ist nicht verifiziert",
+    "verificationInformation" : "Bitt klicke auf den Button unten, um eine Verifizierungsemail anzufordern. Hast du dich verifiziert, kannst du die Anwendung neu laden!",
+    "requestVerification" : "Verifizierung anfordern",
+    "addTask" : "Aufgabe erstellen",
+    "deleteTaskWarning" : "Möchtest du die Aufgabe wirklich löschen?",
+    "validatorMessageDateFuture" : "Datum muss in der Zukunft liegen",
+    "validatorMessagePositiveNumber" : "Gebe eine positive Zahl ein",
+    "dateLabel" : "Zu Erledigen bis (YYYY-MM-DD)",
+    "pointsWorthLabel" : "Punkte wert"
 }
